# paper-agent

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml
docs/: TODO.md
src/paper_agent/: agent.py  graph.py  main.py  nodes.py  state.py
src/speech_paper_daily/: agent.py
